syntax = "proto3";

option csharp_namespace = "Ingredients.Protos";

package ingredients;

service IngredientsService {
  rpc GetToppings(GetToppingsRequest) returns (GetToppingsResponse);
  rpc GetCrust(GetCrustRequest) returns (GetCrustResponse);
}

message GetToppingsRequest { }

message GetToppingsResponse {
  repeated AvailableTopping toppings = 1;
}

message Topping {
  string id = 1;
  string name = 2;
  double price = 3;
}

message AvailableTopping {
  Topping topping = 1;
  int32 quantity = 2;
}

message GetCrustRequest { }

message GetCrustResponse {
  repeated AvailableCrust crusts = 1;
}

message AvailableCrust {
  Crust crust = 1;
  int32 quantity = 2;
}

message Crust {
  string id = 1;
  string name = 2;
  int32 size = 3;
  double price = 4;
}
